--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -43,7 +43,7 @@ else()
 endif()
 
 project( DIG
-  VERSION "0.1.0.1"
+  VERSION "0.1.0.2"
   DESCRIPTION "Digital 3D framework"
   HOMEPAGE_URL "https://bigov.github.io"
 )
@@ -61,8 +61,8 @@ SET( CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++2a -fexceptions -Werror \
 SET( CMAKE_TRY_COMPILE_TARGET_TYPE EXECUTABLE )
 
 if( ${CMAKE_SYSTEM_NAME} MATCHES "Windows" )
-#  SET( CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} \
-#  -mwindows -Wl,-subsystem,windows " )
+  SET( CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} \
+  -mwindows -Wl,-subsystem,windows " )
 elseif()
   SET( CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -no-pie" )
 endif()
